            - New routine str(), which is an alias for stringValue().
            - New class constant supportsInfinity, which is set to true.
        Class Laurent<T>, Laurent2<T>:
            - New routine hash(), which uses the tight encoding.
        Class Link:
            - New routine makeAlternating().
            - New routine seifertCircles().
            - New routine isConnected().
            - New routines countTrivialComponents() and pdAmbiguous(), to help
              understand the limitations of planar diagram codes.
            - New routine hash(), which uses the tight encoding.
            - New routines overForComponent() and underForComponent().
            - New variant of reverse() to reverse just one component of a
              multiple-component link.
            - New routine componentsByStrand().
            - Extended knotSig() to work with any connected link diagram with
              fewer than 64 link components, and added an alias sig() for
              knotSig().
            - Routine hasReducingPass() can now handle multiple-component links.
            - Fixed a bug where calling resolve() would not clear out any
              cached link polynomials that had already been computed.
            - Overhaul of the internal change span classes, including a new
              inner class ChangeAndClearSpan.
            - Optimised so that computed topological properties (e.g., Jones
              and HOMFLY-PT polynomials) are preserved through operations that
              do not change the topology (e.g., Reidemeister moves).
            - Renamed dumpConstruction() to source(), and extended it to produce
              either C++ and Python code via an optional language argument.
              The old C++-only dumpConstruction() is kept but deprecated.
              Also fixed a problem where the C++ initialiser lists were empty
              (instead of containing a single 0) for zero-crossing components.